# raspi

./: .gitignore  hellow.c  pyproject.toml
arduino/nrf52840_ble_temp_micro/: nrf52840_ble_temp_micro.ino
docs/: Ass_1.md  assignment_1.md  assignment_2.md  assignment_3.md
experiment/ee_course/: arithmetic_benchmark.c  ctx_measure.c  interrupt_latency.c  mem_ram_cp.c  mem_sd_cpy.c  multithread.c  power_temp.c  prototype  prototype.c  reboot_time.c  reboottime  stress.c
src/: test.ipynb
